<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gameInstanceStats.StatsFragment">

    <FrameLayout
        android:id="@+id/game_spinner_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_spinner_container"
        android:layout_margin="16dp"
        android:background="@android:color/darker_gray"
        android:id="@+id/stats_display_container"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_alignParentStart="true"
            >
            <TextView
                android:id="@+id/text_stats_total_games_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_games"
                android:textSize="20sp"
                />
            <TextView
                android:id="@+id/text_stats_total_games_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textSize="20sp"

                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:layout_alignParentTop="true"
            >
            <TextView
                android:id="@+id/text_stats_average_score_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/avg_score"
                android:textSize="20sp"
                />
            <TextView
                android:id="@+id/text_stats_average_score_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textSize="20sp"

                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_alignParentEnd="true"
            >
            <TextView
                android:id="@+id/text_stats_average_time_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/avg_time"
                android:textSize="20sp"
                />
            <TextView
                android:id="@+id/text_stats_average_time_next_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/per_player"
                android:textSize="20sp"
                />
            <TextView
                android:id="@+id/text_stats_average_time_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textSize="20sp"

                />

        </LinearLayout>

    </RelativeLayout>
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/stats_display_container"
        app:layout_constraintStart_toStartOf="parent"
        >
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_stats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>