<?xml version="1.0" encoding="utf-8"?>
<Spinner
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/spinner"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".gameSpinner.GameSpinnerFragment"
    />