<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_addchoice"
        android:icon="@drawable/ic_addchoice_black_24dp"
        android:title="" />
    <item
        android:id="@+id/navigation_stats"
        android:icon="@drawable/baseline_insert_chart_outlined_24"
        android:title="stats" />


</menu>